[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-utils-sj"
version = "0.1.0"
description = "A simple utility module for Qiskit beginners by Sunjun Hwang"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["qiskit>=1.0", "matplotlib"]

