[project]
name = "qiskit-utils-sj"
version = "0.1.0"
description = "A beginner-friendly Qiskit utility package for quantum computing. Provides ready-to-use quantum circuits (Bell, GHZ), quick simulation tools, and Bloch sphere visualization to simplify quantum algorithm prototyping."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["qiskit>=1.0", "matplotlib"]
keywords = [
    "quantum-computing",
    "qiskit",
    "quantum-algorithms",
    "quantum-circuits",
    "simulation",
    "bloch-sphere",
    "visualization",
    "educational"
]
